--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="col-lg-12">
             <h2><b>YesBasketball Скидки</b></h2>
                 <div class="block">
-            <a href="">Главная</a>
+            <a href="https://alexander2707.github.io/Page1/">Главная</a>
             <a href="https://alexander2707.github.io/Page3./">О нас</a>
             <a href="https://alexander2707.github.io/Page4/">Контакты</a>
           </div>
