--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <link rel="stylesheet" href="CSS/style.css">
-          <link rel="apple-touch-icon" sizes="180x180" href="favicons5/apple-touch-icon.png">
-          <link rel="icon" type="image/png" sizes="32x32" href="favicons5/favicon-32x32.png">
-          <link rel="icon" type="image/png" sizes="16x16" href="favicons5/favicon-16x16.png">
+          <link rel="apple-touch-icon" sizes="180x180" href=".png">
+          <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+          <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
           <link rel="manifest" href="/site.webmanifest">
           <meta name="msapplication-TileColor" content="#2b5797">
           <meta name="theme-color" content="#7755bb">
